<resources>
    <string name="app_name">Klinik SS</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Masuk</string>
    <string name="kss">Klinik Sehat Sejahtera</string>
    <string name="signUpText">Belum punya akun?</string>
    <string name="signUp">Daftar</string>
    <string name="prsnName">Nama</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="address">Alamat</string>
    <string name="phone_no">No. Handphone</string>
    <string name="doctorList">Lihat Daftar Dokter</string>
    <string name="logout">Keluar</string>
    <string name="registration">Pendaftaran</string>
    <string name="profile">Profil</string>
    <string name="age">Umur</string>
    <string name="complaint">Keluhan</string>
    <string-array name="genderList">
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="see">Lihat</string>
    <string name="doctor">Dokter</string>
    <string name="user">Pengguna</string>
    <string name="clinic">Klinik</string>
    <string name="addClinic">Tambah Klinik</string>
    <string name="room">Ruangan</string>
    <string name="addDoctor">Tambah Dokter</string>
    <string name="edit">Sunting</string>
</resources>
