<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activity.LoginActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher_round"
        android:layout_marginBottom="20dp"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:elevation="10dp"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/inputEmail"
            style="@style/InputText.Email" />

        <EditText
            android:id="@+id/inputPassword"
            style="@style/InputText.Password"
            android:layout_marginBottom="15dp" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/BtnGeneral"
            android:text="@string/login" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:textAlignment="center">

            <TableRow>

                <TextView
                    android:id="@+id/signUpText"
                    style="@style/BasicTextView"
                    android:layout_marginEnd="5dp"
                    android:text="@string/signUpText"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/signUp"
                    style="@style/BasicTextView"
                    android:text="@string/signUp"
                    android:textColor="@android:color/holo_blue_dark" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>