<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Registration">

    <androidx.appcompat.widget.Toolbar
        android:gravity="top"
        android:background="?colorPrimary"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="24dp">
        <TextView
            style="@style/BasicTextView"
            android:text="@string/signUp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:id="@+id/inputName"
            style="@style/InputText.Name"/>

        <EditText
            android:id="@+id/inputAge"
            style="@style/InputText.Age"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:padding="10dp">
            <TableRow
                android:weightSum="2">
                <TextView
                    android:id="@+id/signUpText"
                    style="@style/BasicTextView"
                    android:text="@string/gender"
                    android:textColor="@android:color/black"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"/>

                <Spinner
                    android:id="@+id/genderSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </TableRow>
        </TableLayout>

        <EditText
            android:id="@+id/inputKeluhan"
            style="@style/InputText.Address"
            android:hint="@string/complaint"/>
    </LinearLayout>
</LinearLayout>