<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".activity.Dashboard">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            android:layout_marginBottom="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imgRegis"
                    style="@style/BasicImageView"/>
                <TextView
                    style="@style/BasicTextView.CardviewTitle"
                    android:text="@string/registration"
                    android:layout_toEndOf="@+id/imgRegis"/>
                <Button
                    android:id="@+id/btnRegis"
                    android:text="@string/see"
                    style="@style/BtnGeneral.Cardview"
                    android:layout_toEndOf="@+id/imgRegis"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            android:layout_marginBottom="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imgDoctor"
                    style="@style/BasicImageView"/>
                <TextView
                    style="@style/BasicTextView.CardviewTitle"
                    android:text="@string/doctor"
                    android:layout_toEndOf="@+id/imgDoctor"/>
                <Button
                    android:id="@+id/btnDoctor"
                    android:text="@string/see"
                    style="@style/BtnGeneral.Cardview"
                    android:layout_toEndOf="@+id/imgDoctor"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>